--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stream-io/video-react-sdk": "^1.29.2",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.12",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -38,6 +40,8 @@
     "react-router": "^7.10.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
+    "stream-chat": "^9.27.2",
+    "stream-chat-react": "^13.13.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "uuid": "^13.0.0",
